<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable name="model" type="top.m24h.sonycamloc.MainActivity"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/cameraName0"
            android:layout_width="300dp"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:alpha="@{(model.cameras[0].mac!=null)?1.0f:0.5f}"
            android:autoSizeMaxTextSize="32sp"
            android:autoSizeMinTextSize="20sp"
            android:autoSizeTextType="uniform"
            android:drawablePadding="10dp"
            android:enabled="@{model.cameras[0].ready}"
            android:text="@{model.cameras[0].name ?? model.cameras[0].mac ?? @string/camera_not_set}"
            app:drawableLeftCompat="@drawable/camera_48"
            app:drawableTint="@color/camera_slot"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="00:00:00:00:00:00" />

        <ImageButton
            android:id="@+id/btnScan0"
            style="@style/ImageButtonStyle.Normal"
            android:layout_width="52dp"
            android:layout_height="45dp"
            android:contentDescription="@string/scan"
            android:onClick="@{()->model.onScan(0)}"
            app:layout_constraintBottom_toBottomOf="@id/cameraName0"
            app:layout_constraintRight_toRightOf="parent"
            app:srcCompat="@drawable/scan_32"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/cameraName1"
            android:layout_width="300dp"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:alpha="@{(model.cameras[1].mac!=null)?1.0f:0.5f}"
            android:autoSizeMaxTextSize="32sp"
            android:autoSizeMinTextSize="20sp"
            android:autoSizeTextType="uniform"
            android:drawablePadding="10dp"
            android:enabled="@{model.cameras[1].ready}"
            android:text="@{model.cameras[1].name ?? model.cameras[1].mac ?? @string/camera_not_set}"
            app:drawableLeftCompat="@drawable/camera_48"
            app:drawableTint="@color/camera_slot"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cameraName0"
            tools:text="00:00:00:00:00:00" />

        <ImageButton
            android:id="@+id/btnScan1"
            style="@style/ImageButtonStyle.Normal"
            android:layout_width="52dp"
            android:layout_height="45dp"
            android:contentDescription="@string/scan"
            android:onClick="@{()->model.onScan(1)}"
            app:layout_constraintBottom_toBottomOf="@id/cameraName1"
            app:layout_constraintRight_toRightOf="parent"
            app:srcCompat="@drawable/scan_32"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/cameraName2"
            android:layout_width="300dp"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:alpha="@{(model.cameras[2].mac!=null)?1.0f:0.5f}"
            android:autoSizeMaxTextSize="32sp"
            android:autoSizeMinTextSize="20sp"
            android:autoSizeTextType="uniform"
            android:drawablePadding="10dp"
            android:enabled="@{model.cameras[2].ready}"
            android:text="@{model.cameras[2].name ?? model.cameras[2].mac ?? @string/camera_not_set}"
            app:drawableLeftCompat="@drawable/camera_48"
            app:drawableTint="@color/camera_slot"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cameraName1"
            tools:text="ABCDEFGHIJK" />

        <ImageButton
            android:id="@+id/btnScan2"
            style="@style/ImageButtonStyle.Normal"
            android:layout_width="52dp"
            android:layout_height="45dp"
            android:contentDescription="@string/scan"
            android:onClick="@{()->model.onScan(2)}"
            app:layout_constraintBottom_toBottomOf="@id/cameraName2"
            app:layout_constraintRight_toRightOf="parent"
            app:srcCompat="@drawable/scan_32"
            tools:ignore="TouchTargetSizeCheck" />

        <Switch
            android:id="@+id/locEnable"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:autoSizeMaxTextSize="36sp"
            android:autoSizeMinTextSize="20sp"
            android:autoSizeTextType="uniform"
            android:checked="@={model.locEnable}"
            android:drawableLeft="@drawable/location_48"
            android:drawablePadding="10dp"
            android:splitTrack="false"
            android:switchMinWidth="60dp"
            android:switchPadding="20dp"
            android:text="@string/loc_enable"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cameraName2"
            tools:checked="true" />

        <TextView
            android:id="@+id/faithText"
            style="@style/ControlTextView.Normal"
            android:layout_width="233dp"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:autoSizeMaxTextSize="36sp"
            android:autoSizeMinTextSize="20sp"
            android:autoSizeTextType="uniform"
            android:drawablePadding="10dp"
            android:enabled="true"
            android:text="@string/faith_mode"
            app:drawableLeftCompat="@drawable/cat"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/locEnable" />

        <SeekBar
            android:id="@+id/faith"
            style="@style/Widget.AppCompat.SeekBar.Discrete"
            android:layout_width="113dp"
            android:layout_height="45dp"
            android:max="3"
            android:progress="@={model.faithMode}"
            app:layout_constraintBottom_toBottomOf="@id/faithText"
            app:layout_constraintRight_toRightOf="parent" />

        <TableLayout
            android:id="@+id/lngLat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/faithText"
            app:layout_constraintVertical_bias="0.0">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:text="@string/longitude"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/longitude"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@{model.longitude}"
                    android:textSize="24sp"
                    tools:text="120.1234" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:text="@string/latitude"
                    android:textSize="24sp"/>

                <TextView
                    android:id="@+id/latitude"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@{model.latitude}"
                    android:textSize="24sp"
                    tools:text="30.1234" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:text="@string/altitude"
                    android:textSize="24sp"/>

                <TextView
                    android:id="@+id/altitude"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@{model.altitude}"
                    android:textSize="24sp"
                    tools:text="12.34" />
            </TableRow>

        </TableLayout>

        <TableLayout
            android:id="@+id/camButtons"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            app:layout_constraintBottom_toTopOf="@id/btnExit"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp">

                <Button
                    android:id="@+id/btnZoomW"
                    style="@style/ButtonStyle.Camera"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:baselineAligned="false"
                    android:drawableLeft="@drawable/zoomw_48"
                    android:enabled="@{model.cameras[0].ready &amp;&amp; model.cameras[0].remoteFeatures.contains(`Wide`)}"
                    android:text="@string/zoom_w" />

                <Button
                    android:id="@+id/btnZoomT"
                    style="@style/ButtonStyle.Camera"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:autoSizeTextType="none"
                    android:baselineAligned="false"
                    android:drawableLeft="@drawable/zoomt_48"
                    android:enabled="@{model.cameras[0].ready &amp;&amp; model.cameras[0].remoteFeatures.contains(`Tele`)}"
                    android:text="@string/zoom_t" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/btnShot"
                    style="@style/ButtonStyle.Camera"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:baselineAligned="false"
                    android:drawableLeft="@drawable/shot_48"
                    android:enabled="@{model.cameras[0].ready &amp;&amp; model.cameras[0].remoteFeatures.contains(`Shot`)}"
                    android:text="@string/shot" />

                <Button
                    android:id="@+id/btnFocus"
                    style="@style/ButtonStyle.Camera"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:baselineAligned="false"
                    android:drawableLeft="@drawable/focus_48"
                    android:enabled="@{model.cameras[0].ready &amp;&amp; model.cameras[0].remoteFeatures.contains(`Focus`)}"
                    android:text="@string/focus" />
            </TableRow>
        </TableLayout>

        <Button
            android:id="@+id/btnExit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:drawableRight="@drawable/exit_48"
            android:onClick="@{()->model.onExit()}"
            android:text="@string/exit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/description"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lngLat" />

        <TextView
            android:id="@+id/extraInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="@{model.lastSyncTime}"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/btnExit"
            tools:text="1234567890" />

        <TextView
            android:id="@+id/version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{`v`+model.versionName}"
            android:textSize="12sp"
            android:layout_marginBottom="6dp"
            app:layout_constraintBottom_toTopOf="@id/extraInfo"
            app:layout_constraintLeft_toLeftOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>